@@ -4,6 +4,10 @@ Done for version 2.12.1 (released ??/??/2019):
 BA   1- plotlines flag was ignored
      2- fileopen(,"w" or "a") was bypassing the check for 'secure' default
      3- bug in idealismaximal: K=nfinit(y^2+7); idealismaximal(K,[11,7;0,1])->0
+     4- bnfcertify did not certify correctly its argument when DEBUGLEVEL > 1
+        (\g 2 and above) and the computed class group was trivial (introduced
+        in 2002, commit d3d44841). The code was correct at \g1 or \g0, and in
+        all cases if the computed class group was non-trivial.
 
   Changed
      1- [libpari] renamed rootsof1 -> nfrootsof1
